--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,31 +13,31 @@
 }
 
 #id_username{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_password{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_email{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_new_password1{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_new_password2{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_password1{
-    width: 100%;;
+    width: 100%;
 }
 
 #id_password2{
-    width: 100%;;
+    width: 100%;
 }
 
 .errorlist{
